[package]
name = "bench-keccak256"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
rand = "0.8.5"

sha3 = { version = "0.10.8", features = ["asm"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
keccak-asm = { path = "../keccak-asm" }
xkcp-rs = "0.0"

[dev-dependencies]
criterion = "0.5.1"
hex = "0.4.3"

[profile.release]
opt-level = 3
panic = "abort"
codegen-units = 1

debug = 2
strip = false

[[bench]]
name = "bench"
harness = false
